# .dots

./: .envrc  .gitignore  flake.nix
.aliases/: dry.sh  install.sh  switch.sh  test.sh  update.sh
common/: colors.const.nix  env.const.nix  fonts.const.nix
config/floskell/: config.json
config/kitty/: kitty.conf
config/nvim/: init.lua  lazy-lock.json  lush.lua
config/nvim/lua/: theme.lua
config/tmux/: tmux.conf
config/tmuxinator/: dots.yml
config/xmobar/: flake.nix  xmobar-config.cabal  xmobar.hs
config/xmonad/: flake.nix  xmonad-config.cabal  xmonad.hs
config/zsh/: .zshrc
home/: home.nix
home/conky/: default.nix
home/dunst/: default.nix
home/firefox/: default.nix
home/flameshot/: default.nix
home/git/: default.nix
home/gstreamer/: default.nix
home/gtk/: default.nix
home/kitty/: default.nix
home/krusader/: default.nix
home/nvim/: default.nix
home/qt/: default.nix
home/rofi/: default.nix
home/stalonetray/: default.nix
home/thunderbird/: default.nix
home/tmux/: default.nix
home/udiskie/: default.nix
home/xmobar/: default.nix
home/xmonad/: default.nix
home/zsh/: default.nix
scripts/: connect-to-open-wn.sh  create-partitions.sh
system/: configuration.nix  hardware-configuration.nix  system-packages-list.nix
system/lightdm/: default.nix
system/locate/: default.nix
system/logind/: default.nix
system/nix-ld/: default.nix
system/nvidia/: default.nix
system/polkit/: default.nix
system/sddm/: default.nix
system/sound/: default.nix
system/time-and-locale/: default.nix
system/virtualisation/: default.nix
system/xmonad/: default.nix
system/xorg/: default.nix
system/zsh/: default.nix
(+13 files in other folders)
