cabal-version:      3.0
name:               xmobar-config

version:            0.1.0.0
build-type:         Simple

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable xmonad-config
  import:           warnings
  main-is:          xmobar.hs
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:    base
                  , text
                  , directory
                  , ini
                  , xmobar

  -- Directories containing source files.
  hs-source-dirs:   .

  -- Base language which the package is written in.
  default-language: Haskell2010
