cabal-version:      3.0
name:               xmonad-config

version:            0.1.0.0
build-type:         Simple

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable xmonad-config
  import:           warnings
  main-is:          xmonad.hs
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:    base
                  , text
                  , containers
                  , filepath
                  , directory
                  , ini
                  , unix
                  , data-default-class
                  , X11 >= 1.8
                  , xmonad
                  , xmonad-contrib
                  , xmonad-extras

  -- Directories containing source files.
  hs-source-dirs:   .

  -- Base language which the package is written in.
  default-language: Haskell2010
